--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./css/styles.css">
 </head>
 
 <body>
@@ -79,6 +80,40 @@
             </li>
         </ul>
         </section>
+    <section>
+        <h2>Our Portfolio</h2>
+        <ul>
+            <li><img src="./images/img-5.jpg" width="360" height="300" alt="Banking App"/>
+                <h3>Banking App</h3>
+                <p>App</p>
+            </li>
+
+            <li><img src="./images/img-6.jpg" width="360" height="300" alt="Cashless Payment"/>
+                <h3>Cashless Payment</h3>
+                <p>Marketing</p>
+            </li>
+
+            <li><img src="./images/img-7.jpg" width="360" height="300" alt="Meditation App"/>
+                <h3>Meditation App</h3>
+                <p>App</p>
+            </li>
+
+            <li><img src="./images/img-8.jpg" width="360" height="300" alt="Taxi Service"/>
+                <h3>Taxi Service</h3>
+                <p>Marketing</p>
+            </li>
+
+            <li><img src="./images/img-9.jpg" width="360" height="300" alt="Screen Illustrations"/>
+                <h3>Screen Illustrations</h3>
+                <p>Design</p>
+            </li>
+
+            <li><img src="./images/img-10.jpg" width="360" height="300" alt="Online Courses"/>
+                <h3>Online Courses</h3>
+                <p>Marketing</p>
+            </li>
+        </ul>
+    </section>    
     </main>
 
     <footer>
