--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
                 </li>
                 
                 <li>
-                    <h3>Technologies</h3>
-                    <p>Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
+                    <h3 class="content-title">Technologies</h3>
+                    <p class="content-text">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
                 </li>
            </ul>
         </section>
