--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <h1 class="title-text">Effective Solutions for Your Business</h1>
             <button class="title-button" type="button">Order Service</button>
         </section>
-        <section>
+        <section class="content">
             <h2 class="hidden">Content</h2>
             <ul>
                 <li>
