--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
             <h1 class="title-text">Effective Solutions for Your Business</h1>
             <button class="title-button" type="button">Order Service</button>
         </section>
-        <section class="content">
-            <h2 class="hidden">Content</h2>
+        <section>
+            <h2 class="content">Content</h2>
             <ul>
                 <li>
                     <h3 class="content-title">Strategy</h3>
