--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <button class="title-button" type="button">Order Service</button>
         </section>
         <section>
-            <h2 class="content">Content</h2>
+            <h2>Content</h2>
             <ul>
                 <li>
                     <h3 class="content-title">Strategy</h3>
